change margin and padding values to resolve horizontal scrolling issue

--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -3,8 +3,8 @@
 }
 
 .saved-news__card-list {
-  padding: 62px 106px 62px 102px;
-  margin: 0;
+  margin: 62px 106px 62px 102px;
+  padding: 0;
   background: #f5f6f7;
   display: grid;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 960px) {
   .saved-news__card-list {
-    padding: 32px 40px;
+    margin: 32px 40px;
     column-gap: 8px;
   }
 
@@ -36,7 +36,7 @@
     width: 100%;
     grid-template-columns: repeat(1, auto);
     grid-row-gap: 10px;
-    padding: 24px 16px 13px 16px;
+    margin: 24px auto 13px auto;
     justify-content: center;
   }
 }
